tests/paczka2/big_fuzzy/32115665.err
Error in line 2: vKUhEXNH A214 25,3
Error in line 3: VdJ A581 16,8
Error in line 10: 2wF3zGBoW6m A471 34,3
Error in line 24: jVnuwAa9 A471 7P2
Error in line 31: VdJ A581 100,70
Error in line 15: A869 A869 45,0
Error in line 35: vKUhEXNH A869 34,0
Error in line 45: vKUhEXNH A471 91,9
Error in line 33: VdJ A581 210,0
Error in line 48: vKUhEXNH A581 38,8
Error in line 64: vKUhEXNH A4U1 94,U
Error in line 56: 2wF3zGBoW6m A214 80,9
Error in line 68: uAMjug A581 210,0
Error in line 66: 1hFIHW0E A869 40,3
Error in line 72: jVnuwAa9 A869 11,8
Error in line 83: A869 A214 4,3
Error in line 60: vKUhEXNH A471 41,9
Error in line 81: jVnuwAa9 A581 99,1
Error in line 93: jVnuwAa9 A581 69,6
Error in line 95: 1hFIHW0E A214 325,4
Error in line 96: jVnuwAa9 A214 21,4
Error in line 101: A869 A214 78,50
Error in line 97: A869 A214 22,4
Error in line 100: jVnuwAa9 A581 53,8
Error in line 106: A869 A869 15,2
Error in line 112: 2wF3zGBoW6m A581 17,2
Error in line 122: 1hFIHW0E A214 5,0
Error in line 136: A869 A214 1,4
Error in line 133: uAMjug A869 66,2
Error in line 155: A869 A471 7,3
Error in line 148: uAMjug A581 99,0
Error in line 140: 2wF3zGBoW6m A581 170,5
Error in line 167: jVnuwAa9 A869 73,6
Error in line 166: 2wF3zGBoW6m A214 37,4
Error in line 172: jVnuwAa9 A581 58,8
Error in line 180: jVnuwAa9 A471 13,4
Error in line 177: A869 A214 69,7
Error in line 185: A869 A471 16,3
Error in line 206: VdJ A869 53,6
Error in line 209: uAMjug A471 90,3
Error in line 210: 2wF3zGBoW6m A869 57,8
Error in line 221: 2wF3zGBoW6m A869 30,06
Error in line 211: uAMjug A581 98,5
Error in line 207: VdJ A214 22,2
Error in line 215: 2wF3zGBoW6m A471 22,3
Error in line 226: A869 A869 22,1
Error in line 223: VdJ A581 5,3
Error in line 230: VdJ A214 6,9
Error in line 234: vKUhEXNH A581 50,8
Error in line 235: A869 A869 93,8
Error in line 224: 2wF3zGBoW6m A869 29,7
Error in line 238: vKUhEXNH A869 21,6
Error in line 242: 1hFIHW0E A581 50,9
